--- a/recommendations.html
+++ b/recommendations.html
@@ -9,6 +9,18 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </head>
 <body class="recommendations">
+    
+    <div class="banner-container">
+        <a href="https://cafe.naver.com/bikesaddle" target="_blank">
+            <img src="https://raw.githubusercontent.com/twonome/saddlefinder/main/images/카페배너.png" alt="카페 바로가기 배너">
+        </a>
+        <a href="https://www.youtube.com/@user-bs8sm5gh5j" target="_blank">
+            <img src="https://raw.githubusercontent.com/twonome/saddlefinder/main/images/유튜브배너.png" alt="유튜브 바로가기 배너">
+        </a>
+         <a href="https://smartstore.naver.com/anjangtong" target="_blank">
+            <img src="https://raw.githubusercontent.com/twonome/saddlefinder/main/images/대여배너.png" alt="스마트스토어 바로가기 배너">
+        </a>
+    </div>
     <div class="nine">
         <h1>추천 안장 목록<span>안장통바이시클 제공</span></h1>
     </div>
