--- a/recommendations.html
+++ b/recommendations.html
@@ -14,7 +14,7 @@
         <a href="https://cafe.naver.com/bikesaddle" target="_blank">
             <img src="https://raw.githubusercontent.com/twonome/saddlefinder/main/images/카페배너.png" alt="카페 바로가기 배너">
         </a>
-        <a href="https://www.youtube.com/@user-bs8sm5gh5j" target="_blank">
+        <a href="https://www.youtube.com/@anjangtong" target="_blank">
             <img src="https://raw.githubusercontent.com/twonome/saddlefinder/main/images/유튜브배너.png" alt="유튜브 바로가기 배너">
         </a>
          <a href="https://smartstore.naver.com/anjangtong" target="_blank">
