--- a/recommendations.html
+++ b/recommendations.html
@@ -20,7 +20,12 @@
          <a href="https://smartstore.naver.com/anjangtong" target="_blank">
             <img src="https://raw.githubusercontent.com/twonome/saddlefinder/main/images/대여배너.png" alt="스마트스토어 바로가기 배너">
         </a>
+        
+        <div class="discount-notice">
+            📢 신품 안장 구매 시 해당 안장 대여 가격 빼드립니다 (최대 20%)!!!
+        </div>
     </div>
+
     <div class="nine">
         <h1>추천 안장 목록<span>안장통바이시클 제공</span></h1>
     </div>
