--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="main-container" class="container">
         <div id="main-button-container">
-            <button class="main-cta-button" onclick="startQuestionnaire()">나에게 맞는 안장 자동추천받기 (30초)</button>
+            <button class="main-cta-button" onclick="startQuestionnaire()">나에게 맞는 안장<br>자동추천받기(30초)</button>
         </div>
 
         <div class="category-container">
